--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "gapi-script": "^1.2.0",
+    "grpc-tools": "^1.12.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
@@ -17,7 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "generate:proto": "grpc_tools_node_protoc --js_out=import_style=commonjs,binary:proto-gen --grpc_out=proto-gen --plugin=protoc-gen-grpc=./node_modules/.bin/grpc_tools_node_protoc_plugin ./src/proto/sample.proto"
   },
   "eslintConfig": {
     "extends": [
